Added a meta tag.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
   <meta charset="UTF-8">
-
+  <meta property='og:image' content="/Assets/Images/Me.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!--Link to google font  -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
