--- a/index.html
+++ b/index.html
@@ -65,31 +65,32 @@
         <!-- Picture of myself and a couple of paragraphs about myself-->
         <p> <img class="img-responsive" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
 
-          My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graducated
+          My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graduated
           high school I moved to Phoenix, AZ to attend DeVry University to earn a degree as an Electronics Engineer.
-          While going to school there I worked at ABC Diaper servie washing and folding baby diapers. But, as life
+          While going to school there I worked at ABC Diaper service washing and folding baby diapers. But, as life
           would have it, a degree in Electronic Engineering wasn't happening due to financial difficulties, so I had to
           drop out of school and went to work for FotoMat. After waiting 2 years or so I finally made a decision to go
-          back to school and went to Miller Institute were I got my diploma as an Electronic Technician. After
-          graduating I went work for Tegal Corporation. A semiconductor Etching equipment company as a Field Service
-          Engineer.</p>
+          back to school and went to Miller Institute (now know as ITT Technical Institute) were I got my diploma as an 
+          Electronic Technician. After  graduating I went work for Tegal Corporation. A semiconductor Etching equipment 
+          company as a Field Service Engineer.</p>
 
 
         <p>I worked in the Semiconductor industry for approximately 15 years, eventually moving my way up to a Process
           Technician position at Motorla. This was a very rewarding job, as I was able to design experiments and come up
           with processes that were actually used in the manufacturing of semiconductors. I would write the
           specifications for the processing procedures, maintenance procedures, operator procedures and tests, all
-          related to the process I created. Eventuall, I realized this just wasn't the career I had dreamed about. I
+          related to the process I created. Eventually, I realized this just wasn't the career I had dreamed about. I
           wanted to program computers, so I went back to school at DeVry University and got a bachelors degree in
-          Computer Information Sytems. I worked for about 4 years coding in Ada at Performance Software. Ada is a
-          languare used for the aircraft industry. I realized this just wasn't what I was looking for, so I went to work
+          Computer Information Systems. I worked for about 4 years coding in Ada at Performance Software. Ada is a
+          language used for the aircraft industry. I realized this just wasn't what I was looking for, so I went to work
           for Risk Placement Sercives. I did a lot of SQL and some C# programming here. I really enjoyed doing this.
-          After 4 years here, my husband at the time, thought I should quit working and become a stay at home mom and
+          After 4 years there, my husband at the time, thought I should quit working and become a stay at home mom and
           raise our than 2 year old daughter. It would save us a lot of money, and also we wouldn't have another person
           raising our child. After the divorce, I realized I wanted to go back to work and get into the field of work I
           wanted to be in when I graduated from DeVry... Web Development, so I decided to go back to school at
           University of Arizona Bootcamp for Full Stack Web Development. I truly love to code, and enjoy the challenges
-          that it brings. </p>
+          that it brings. The cirriculum here is very fast paced and covers current technology to help me be ready for
+          employers in todays market.</p>
       </div>
     </div>
     <div class="row">
