got the emai part of the index.html page working.

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
     <!-- Put form in a container -->
     <container>
       <!-- Start of the form -->
-      <form>
+      <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="text/plain">
         <!-- Label and data entry box for the name of the person tyring to contact me -->
         <div class="row">
           <div class="col=xs-9">
