--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <ul>
             <!-- Link to my email address so someone can email me. -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/email.png"><a href="#"> dazacher2000@yahoo.com</a> </li>
+              <li><img class="indexImages" src="./Assets/Images/email.png"><a href="mailto:dazacher2000@yahoo.com? subject=subject text"> Dee Ann Scanniello </a> </li>
             </strong>
             <!-- Link to my GitHub page -->
             <strong>
