--- a/contact.html
+++ b/contact.html
@@ -2,109 +2,178 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="Assets/Images/favicon.png" type="image/x-icon/">
-  <title>Contact</title>
+    
+    <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
+    <meta charset="UTF-8">
+    <meta property='og:image' content="/Assets/Images/Me.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--Link to google font  -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
+    <!-- We need to bring in the bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <!-- Link to personal style sheet -->
+    <link rel="stylesheet" href="./style.css" />
 
-  <!-- Link to google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
-
-  <!-- Link to Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-
-  <!-- Link to personal style sheet -->
-  <link rel="stylesheet" href="./style.css" />
+    <title>Dee Ann Scanniello Bio</title>
 </head>
 
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!-- Name and link link to about me page on the navbar -->
+        <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <!-- Image of myself in the navbar. Also a link back to the about me page. -->
-    <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-
-          <!-- Link to About Me page -->
-          <a class="nav-link" href="./index.html">About Me <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <!-- Link to Resume PDF Page -->
-          <a class="nav-item nav-link" href="./Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Resume</a>
-        </li>
-        <li class="nav-item">
-          <!-- Link to Portfolio page -->
-          <a class="nav-link" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <!-- Link to Contact page -->
-          <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Container to hold the line and Contact header in -->
-  <div class="container">
-    <div class="row" id="straight-line">
-      <div class="col-xs-12">
-
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <h2>Contact</h2>
-      </div>
-    </div>
-    </container>
-    <!-- Put form in a container -->
-    <container>
-      <!-- Start of the form -->
-      <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="text/plain">
-        <!-- Label and data entry box for the name of the person tyring to contact me -->
-        <div class="row">
-          <div class="col=xs-9">
-            <div class="form-group">
-              <label for="formGroupExampleInput">Name</label>
-              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
+            <div class="flex-row-reverse">
+                <div class="navbar-nav">
+                    <!-- Link to the About me page -->
+                    <a class="nav-item nav-link active" href="./index.html">About Me <span
+                            class="sr-only">(current)</span></a>
+                    <!-- Link to the Resume page -->
+                    <a class="nav-item nav-link"
+                        href="./Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Resume</a>
+                    <!-- Link to the Portfolio page -->
+                    <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+                    <!-- Link to the Contact page -->
+                    <a class="nav-item nav-link" href="./contact.html">Contact</a>
+                </div>
             </div>
-            <!-- Label and data entry box for the email address of the person trying to contact me -->
-            <div class="form-group">
-              <label for="formGroupExampleInput2">Email</label>
-              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="example@gmail.com">
-            </div>
-            <div class="form-group">
-              <!-- Label and data entry box for the message from the person who is tying to contact me -->
-              <label for="formGroupExampleInput3">Message</label>
-              <input type="text" class="form-control" id="formGroupExampleInput3">
-            </div>
-            <!-- Submit button for the person to push to submit the data they wish to send to me -->
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-          <div class="col-xs-3"></div>
         </div>
-  </div>
-  </form>
-  </container>
-  </div>
+        </div>
+    </nav>
+    <!-- Container to hold the line and Contact header in -->
+    <div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h2>Contact</h2>
+        </div>
+    </div>
+        <div class="row" id="straight-line">
+            <div class="col-xs-12">
 
-  </div>
+            </div>
+        </div>
+        </container>
+        <!-- Put form in a container -->
+        <container>
+            <!-- Start of the form -->
+            <form>
+                <!-- Form Started -->
+                <div class="container form-top">
+                    <div class="row">
+                        <?php include  './Assets/handler.php';?>
+                        <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
+                            <div class="panel panel-danger">
+                                <div class="panel-body">
+                                    <form id="reused_form">
+                                        <div class="form-group">
+                                            <label><i class="fa fa-user" aria-hidden="true"></i> Name</label>
+                                            <input type="text" name="name" class="form-control"
+                                                placeholder="Enter Name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label><i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
+                                            <input type="email" name="email" class="form-control"
+                                                placeholder="Enter Email" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
+                                            <textarea rows="3" name="message" class="form-control"
+                                               maxlength="3000" placeholder="Type Your Message" required></textarea>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <button class="btn btn-raised  btn-danger">Submit</button>
+                                        </div>
+                                    </form>
+                                    <div id="error_message" style="width:100%; height:100%; display:none; ">
+                                        <h4>Error</h4>
+                                        Sorry there was an error sending your form.
+                                    </div>
+                                    <div id="success_message" style="width:100%; height:100%; display:none; ">
+                                        <h2>Success! Your Message was Sent Successfully.</h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script>
+                    $(function () {
+                        function after_form_submitted(data) {
+                            if (data.result == 'success') {
+                                $('form#reused_form').hide();
+                                $('#success_message').show();
+                                $('#error_message').hide();
+                            }
+                            else {
+                                $('#error_message').append('<ul></ul>');
+
+                                jQuery.each(data.errors, function (key, val) {
+                                    $('#error_message ul').append('<li>' + key + ':' + val + '</li>');
+                                });
+                                $('#success_message').hide();
+                                $('#error_message').show();
+
+                                //reverse the response on the button
+                                $('button[type="button"]', $form).each(function () {
+                                    $btn = $(this);
+                                    label = $btn.prop('orig_label');
+                                    if (label) {
+                                        $btn.prop('type', 'submit');
+                                        $btn.text(label);
+                                        $btn.prop('orig_label', '');
+                                    }
+                                });
+
+                            }//else
+                        }
+
+                        $('#reused_form').submit(function (e) {
+                            e.preventDefault();
+
+                            $form = $(this);
+                            //show some response on the button
+                            $('button[type="submit"]', $form).each(function () {
+                                $btn = $(this);
+                                $btn.prop('type', 'button');
+                                $btn.prop('orig_label', $btn.text());
+                                $btn.text('Sending ...');
+                            });
+
+
+                            $.ajax({
+                                type: "POST",
+                                url: 'handler.php',
+                                data: $form.serialize(),
+                                success: after_form_submitted,
+                                dataType: 'json'
+                            });
+
+                        });
+                    });
+                </script>
+                
+                <!-- Form Ended -->
+            </form>
+        </container>
+    </div>
+
+    </div>
 
 </body>
 
