--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
   <meta charset="UTF-8">
   <meta property='og:image' content="/Assets/Images/Me.png"/>
@@ -63,7 +64,7 @@
     <div class="row">
       <div class="col-xs-12 pull-left">
         <!-- Picture of myself and a couple of paragraphs about myself-->
-        <p> <img class="img-responsive" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
+        <p> <img class="img-responsive" src="Assets/Images/Me3-0.jpg" alt="Dee Ann Scanniello">
 
           My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graduated
           high school I moved to Phoenix, AZ to attend DeVry University to earn a degree as an Electronics Engineer.
