Changed profile photo.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta property='og:image' content="/Assets/Images/Me.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/6d15c51378.js" crossorigin="anonymous"></script>
   <!--Link to google font  -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
   <!-- We need to bring in the bootstrap CSS -->
@@ -64,7 +65,7 @@
     <div class="row">
       <div class="col-xs-12 pull-left">
         <!-- Picture of myself and a couple of paragraphs about myself-->
-        <p> <img class="img-responsive" src="Assets/Images/Me3-0.jpg" alt="Dee Ann Scanniello">
+        <p> <img class="img-responsive" src="Assets/Images/Me4.png" alt="Dee Ann Scanniello">
 
           My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graduated
           high school I moved to Phoenix, AZ to attend DeVry University to earn a degree as an Electronics Engineer.
