--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta property='og:image' content="/Assets/Images/Me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />   
     <!--Link to google font  -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
     <!-- We need to bring in the bootstrap CSS -->
