--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="row">
       <div class="col-xs-12 pull-left">
         <!-- Picture of myself and a couple of paragraphs about myself-->
-        <p> <img class="img-responsive" src="Assets/Images/Me4.png" alt="Dee Ann Scanniello">
+        <p> <img class="img-responsive" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
 
           My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graduated
           high school I moved to Phoenix, AZ to attend DeVry University to earn a degree as an Electronics Engineer.
