Still working on email functionality.

--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,10 @@
         <!-- Put form in a container -->
         <container>
             <!-- Start of the form -->
-            <form>
+            <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="multipart/form-data" name="EmailForm">
                 <!-- Form Started -->
                 <div class="container form-top">
                     <div class="row">
-                        <?php include  './Assets/handler.php';?>
                         <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
                             <div class="panel panel-danger">
                                 <div class="panel-body">
