--- a/contact2.html
+++ b/contact2.html
@@ -76,7 +76,7 @@
     <!-- Put form in a container -->
     <container>
       <!-- Start of the form -->
-      <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="multipart/form-data" name="EmailFrom">
+      <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="multipart/form-data" name="EmailForm">
         <!-- Label and data entry box for the name of the person tyring to contact me -->
         <div class="row">
           <div class="col=xs-9">
