--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                                         </div>
 
                                         <div class="form-group">
-                                            <button class="btn btn-raised  btn-danger">Submit</button>
+                                            <button class="btn btn-raised">Submit</button>
                                         </div>
                                     </form>
                                     <div id="error_message" style="width:100%; height:100%; display:none; ">
