--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,7 @@
             <a id="anchor1" href="https://dazacher.github.io/Trivia-With-Friends/" target="_blank">Deployed
               Website</a><br>
             <a id="anchor2" href="https://github.com/dazacher/Trivia-With-Friends" target="_blank">GitHub Code</a>
+            <p>Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub</p>
           </div>
         </div>
       </div>
@@ -85,6 +86,7 @@
             <a id="anchor3" href="https://dazacher.github.io/Weather-Dashboard/" target="_blank">Deployed
               Website</a><br>
             <a id="anchor4" href="https://github.com/dazacher/Weather-Dashboard" target="_blank">GitHub Code</a>
+            <p>Applications: Bootstrap, JavaScript, jQuery, LocalStorage</p>
           </div>
         </div>
       </div>
@@ -100,18 +102,20 @@
             <a id="anchor5" href="https://dazacher.github.io/Password-Generator/" target="_blank">Deployed
               Website</a><br>
             <a id="anchor6" href="https://github.com/dazacher/Password-Generator" target="_blank">GitHub Code</a>
+            <p></p>
           </div>
         </div>
       </div>
       <!-- Fourth picture on my portfolio page.t-->
       <div class="col-sm-6 col-xs-12">
         <div class="box4">
-          <img src="./Assets/Images/Yorkshire-Terrier-Quiz.jpg" alt="Yorkshire Terrier Quiz">
+          <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger">
           <div class="text">
-            <h5>Yorkshire Terrier Quiz</h5>
+            <h5>Eat-Da-Burger</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor7" href="https://dazacher.github.io/Quiz/" target="_blank">Deployed Website</a><br>
-            <a id="anchor8" href="https://github.com/dazacher/Quiz" target="_blank">GitHub Code</a>
+            <a id="anchor7" href="https://eat-da-burger-das.herokuapp.com/" target="_blank">Deployed Website</a><br>
+            <a id="anchor8" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub Code</a>
+            <p>Applications: Handlebars.js, Node.js, mysql, Express</p>
           </div>
         </div>
       </div>
