Added application info to each project on the profile page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
             <a id="anchor5" href="https://dazacher.github.io/Password-Generator/" target="_blank">Deployed
               Website</a><br>
             <a id="anchor6" href="https://github.com/dazacher/Password-Generator" target="_blank">GitHub Code</a>
-            <p></p>
+            <p>Applications: HTML, CSS, JavaScript</p>
           </div>
         </div>
       </div>
@@ -130,6 +130,7 @@
               <a id="anchor9" href="https://dazacher.github.io/Work_Day_Scheduler/" target="_blank">Deployed
                 Website</a><br>
               <a id="anchor10" href="https://github.com/dazacher/Work_Day_Scheduler" target="_blank">GitHub Code</a>
+              <p>Applications: Bootstrap, HTML, CSS </p>
             </div>
           </div>
         </div>
@@ -137,16 +138,17 @@
         <div class="col-sm-6 col-xs-12">
           <div class="box6">
             <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming">
-          <div class="text">
-            <h5>OOP Programming</h5>
-            <!--Link github code -->
-            <!-- <a id="anchor11" href="" target="_blank">Deployed Website</a><br> -->
-            <a id="anchor12" href="https://github.com/dazacher/OOP-Programming" target="_blank">GitHub Code</a>
+            <div class="text">
+              <h5>OOP Programming</h5>
+              <!--Link github code -->
+              <!-- <a id="anchor11" href="" target="_blank">Deployed Website</a><br> -->
+              <a id="anchor12" href="https://github.com/dazacher/OOP-Programming" target="_blank">GitHub Code</a>
+              <p>Applications: Inquirer, HTML, JavaScript, CSS</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 </body>
 
 </html>
