Updated About Me.

--- a/contact2.html
+++ b/contact2.html
@@ -63,12 +63,12 @@
   <!-- Container to hold the line and Contact header in -->
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-12">
         <h2>Contact</h2>
       </div>
     </div>
     <div class="row" id="straight-line">
-      <div class="col-xs-12">
+      <div class="col-12">
 
       </div>
     </div>
@@ -79,7 +79,7 @@
       <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="multipart/form-data" name="EmailForm">
         <!-- Label and data entry box for the name of the person tyring to contact me -->
         <div class="row">
-          <div class="col=xs-9">
+          <div class="col-9">
             <div class="form-group">
               <label for="formGroupExampleInput">Name</label>
               <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
@@ -97,7 +97,7 @@
             <!-- Submit button for the person to push to submit the data they wish to send to me -->
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
-          <div class="col-xs-3"></div>
+          <div class="col-3"></div>
         </div>
   </div>
   </form>
