--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
             <!-- Links to GitHub deployed website and github code -->
             <a id="anchor7" href="https://eat-da-burger-das.herokuapp.com/" target="_blank">Deployed Website</a><br>
             <a id="anchor8" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub Code</a>
-            <p>Applications: Handlebars.js, Node.js, mysql, Express</p>
+            <p>Applications: Handlebars.js, Node.js, MySql, Express, Heroku</p>
           </div>
         </div>
       </div>
