--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- Picture of myself and a couple of paragraphs about myself-->
         <p> <img class="img-responsive" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
 
-          My name is Dee Ann Scanniello. I am a Full Stack Web Developer, self-driven and easily adaptable, with a knack
+          My name is Dee Ann Scanniello. I am a Full Stack Web Developer, self-driven, easily adaptable and flexible, with a knack
           for attention
           to detail. I have a passion for full stack development. Quick learner, who enjoys challenges and resolving
           problems. A
